--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     <nav>
-        <h1>Campo minato</h1>
+        <h1 style="color: red;">Campo minato</h1>
 
-        <div class="input-group __input">
+        <div class="group-input">
             <select class="form-select" id="inputGroupSelect04" aria-label="Example select with button addon">
               <option selected>Facile</option>
               <option value="1">Medio</option>
               <option value="2">Difficile</option>
             </select>
-            <button id="button" class="btn __btn" type="button">Choose</button>
+            <button id="button" class="btn" type="button">Choose</button>
           </div>
 
     </nav>
 
-    <div class="__container">
+    <div class="container">
 
 
-        <div id="__grid-container">
+        <div id="second-container">
 
         </div>
 
